# dkod-cli

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/dkod-cli/: Cargo.toml
crates/dkod-cli/src/: main.rs
crates/dkod-cli/src/cmd/: init.rs  log.rs  mod.rs  show.rs
crates/dkod-cli/src/cmd/capture/: claude_code.rs  codex.rs  copilot_cli.rs  cursor.rs  factory_ai.rs  gemini_cli.rs  mod.rs  opencode.rs
crates/dkod-cli/tests/: cli.rs  smoke.rs
crates/dkod-core/: Cargo.toml
crates/dkod-core/src/: config.rs  lib.rs  redact.rs  refs.rs  session.rs  store.rs
crates/dkod-core/src/capture/: ansi.rs  claude_code.rs  codex.rs  copilot_cli.rs  cursor.rs  factory_ai.rs  gemini_cli.rs  mod.rs  opencode.rs  timestamp.rs  worktree_diff.rs
crates/dkod-core/testdata/claude-code/: synthetic-transcript.jsonl
crates/dkod-core/testdata/codex/: synthetic-rollout.jsonl
crates/dkod-core/testdata/copilot_cli/: synthetic-events.jsonl
crates/dkod-core/testdata/cursor/: synthetic-events.jsonl
crates/dkod-core/testdata/factory_ai/: synthetic-events.jsonl
crates/dkod-core/testdata/gemini_cli/: synthetic-events.jsonl
crates/dkod-core/testdata/opencode/: synthetic-output.json
docs/plans/: 2026-05-03-dkod-cli-v1-implementation.md  2026-05-03-dkod-pivot-design.md
docs/research/: claude-code-capture-protocol.md  codex-transcript-format.md
