[workspace]
resolver = "2"
members = ["crates/dkod-core", "crates/dkod-cli"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["dkod"]
repository = "https://github.com/dkod-io/dkod-cli"
rust-version = "1.75"

[workspace.dependencies]
gix = { version = "0.66", default-features = false, features = ["max-performance-safe"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
uuid = { version = "1", features = ["v7", "serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
dirs = "5"
