[package]
name = "dkod-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "dkod"
path = "src/main.rs"

[dependencies]
dkod-core = { path = "../dkod-core" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
gix.workspace = true
toml.workspace = true
regex.workspace = true
dirs.workspace = true
tokio.workspace = true
sha2.workspace = true

[dev-dependencies]
dkod-core = { path = "../dkod-core" }
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
