[package]
name = "dkod-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gix.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
